# orbit-boost

./: .gitignore  LICENSE  README.md
IP/Vitis HLS/: ldl_dsolve.cpp  ldl_dsolve.hpp  testbench.cpp
IP/Vivado/Package/: component.xml  pack.sh  run_ippack.tcl  sysgen_info.xml  vivado.jou
IP/Vivado/Package/doc/: ReleaseNotes.txt
IP/Vivado/Package/drivers/ldl_dsolve_v1_0/src/: CMakeLists.txt  Makefile  xldl_dsolve.c  xldl_dsolve.h  xldl_dsolve_hw.h  xldl_dsolve_linux.c  xldl_dsolve_sinit.c
IP/Vivado/Package/hdl/ip.tmp/: subcore_proj.xpr
IP/Vivado/Package/hdl/verilog/: ldl_dsolve.v  ldl_dsolve_compute.v  ldl_dsolve_compute_Pipeline_read_from_stream.v  ldl_dsolve_control_s_axi.v  ldl_dsolve_ddiv_64ns_64ns_64_22_no_dsp_1.v  ldl_dsolve_entry_proc.v  ldl_dsolve_fifo_w128_d2_S.v  ldl_dsolve_fifo_w128_d3_S.v  ldl_dsolve_fifo_w32_d2_S.v  ldl_dsolve_fifo_w64_d4_S.v  ldl_dsolve_flow_control_loop_pipe_sequential_init.v  ldl_dsolve_frp_fifoout.v  ldl_dsolve_frp_pipeline_valid.v  ldl_dsolve_gmem0_m_axi.v  ldl_dsolve_gmem1_m_axi.v  ldl_dsolve_gmem2_m_axi.v  ldl_dsolve_hls_deadlock_detection_unit.v  ldl_dsolve_hls_deadlock_detector.vh  ldl_dsolve_hls_deadlock_report_unit.vh  ldl_dsolve_read1.v  ldl_dsolve_read1_Pipeline_read.v  ldl_dsolve_read2.v  (+5 more)
IP/Vivado/Package/xgui/: ldl_dsolve_v1_0.tcl
hardware/: Makefile
hardware/native/src/: header.c  header.h  main.c
hardware/python/: Host.ipynb  README.md  demo_hardware_division.ipynb  execution_time_plotter.ipynb  ldl_dsolve_hardware.py
hardware/python/bitstream/: doublerate.hwh
hardware/src/: guido.c  guido.h  main.c
(+31 files in other folders)
